# mlflow-operator

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE.txt  Makefile  README.md  Tiltfile
charts/mlflow-operator/: Chart.yaml  values.yaml
charts/mlflow-operator/templates/: NOTES.txt  deployment.yaml  role.yaml  serviceaccount.yaml
charts/mlflow-operator/templates/crds/: mlflow_operator_crd.yaml
charts/mlflow-operator/templates/tests/: test-connection.yaml
dev/: Dockerfile  dev.Dockerfile
dev/kubernetes/: operator.yaml  setup.sh
dev/kubernetes/minio/: apply.sh  minio-operator.yaml  minio-standalone.yaml  minio-tenant.yaml  tenant-service.yaml
dev/kubernetes/mlflow/: Dockerfile  apply.sh  deployment.yaml  requirements.txt
dev/kubernetes/operator/: apply.sh  deployment.yaml  operator.yaml
dev/models/identity-model/: conda-env.yaml  identity_model.py  log_register.py
dev/scripts/: generate_crds.sh  install-operator.sh  uninstall-operator.sh
dev/test-manifests/: deployment.yaml  identity-model-create.yaml
docs/: deploying-models.md  development.md
src/: crdgen.rs  main.rs
src/objects/: mod.rs  model_deployment.rs
