[package]
name = "mlflow-operator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "crdgen"
path = "src/crdgen.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
kube = { version = "0.77.0", default-features = true, features = ["derive", "runtime"] }
k8s-openapi = { version = "0.16.0", default-features = true, features = ["v1_25", "schemars"] }
serde = { version = "1" }
serde_json = { version = "1" }
serde_yaml = "0.9.16"
schemars = { version = "0.8" }
thiserror = "1" # Custom Error definitions and convenient error mappings
futures = "0.3"
openssl = { version = "0.10", features = ["vendored"] }
