[package]
name = "mlflow-operator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "crdgen"
path = "src/crdgen.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
kube = { version = "0.77.0", default-features = true, features = ["derive", "runtime"] }
k8s-openapi = { version = "0.16.0", default-features = true, features = ["v1_25", "schemars"] }
serde = { version = "1.0.152" }
serde_json = { version = "1.0.91" }
serde_yaml = {version = "0.9.16" }
schemars = { version = "0.8.11" }
thiserror = {version = "1.0.38"  }
futures = { version = "0.3.25" }
openssl = { version = "0.10.45", features = ["vendored"] }
uuid = { version = "1.2.2", features = ["v4"] }
